######################################################################
Revision history for Perl extension OAuth::Cmdline

0.02  2014/07/20
    (ms) Works now with the Google Drive API

0.01  2014/07/12
    (ms) Where it all began.