@@ -3,7 +3,6 @@ package OAuth::Cmdline;
 ###########################################
 use strict;
 use warnings;
-use Moo;
 use URI;
 use YAML qw( DumpFile LoadFile );
 use HTTP::Request::Common;
@@ -11,6 +10,7 @@ use LWP::UserAgent;
 use Log::Log4perl qw(:easy);
 use JSON qw( from_json );
 use MIME::Base64;
+use Moo;
 
 our $VERSION = "0.02";
 
@@ -246,7 +246,9 @@ OAuth::Cmdline - OAuth2 for command line applications using web services
 
 =head1 SYNOPSIS
 
-    my $oauth = OAuth::Cmdline->new( site => "spotify" );
+      # Use a site-specific class instead of the parent class, see
+      # description below
+    my $oauth = OAuth::Cmdline::GoogleDrive->new( );
     $oauth->access_token();
 
 =head1 DESCRIPTION
@@ -262,6 +264,19 @@ Google Drive API and Spotify.
 But stay tuned, I'll refactor the site-specific parts of the
 code soon, so that it'll work with Evernote, Tumblr and others as 
 well. Hey, or send me a pull request if you want to beat me to it! :)
+So far the following subclasses are available:
+
+    OAuth::Cmdline::GoogleDrive
+    OAuth::Cmdline::Spotify
+
+If you want to use this module for a different service, go ahead and try
+it, it might just as well work. In this case, specify the C<site> parameter,
+which determines the name of the cache file with the access token and
+other settings in your home directory:
+
+      # Will use standard OAuth techniques and save your
+      # tokens in ~/.some-other.site.yml
+    my $oauth = OAuth::Cmdline->new( site => "some-other-site" );
 
 =head1 GETTING STARTED
 
@@ -275,12 +290,11 @@ Then, run the following script (the example uses the Spotify web service)
     use OAuth::Cmdline;
     use OAuth::Cmdline::Mojo;
 
-    my $oauth = OAuth::Cmdline->new(
+    my $oauth = OAuth::Cmdline::GoogleDrive->new(
         client_id     => "XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX",
         client_secret => "YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY",
         login_uri     => "https://accounts.spotify.com/authorize",
         token_uri     => "https://accounts.spotify.com/api/token",
-        site          => "spotify",
         scope         => "user-read-private",
     );
     
