@@ -1,2 +1,2 @@
 <a href="<%= $login_url %>"
->Login on Spotify</a>
+>Login on <%= $site %></a>
