@@ -3,6 +3,9 @@ Revision history for Perl extension OAuth::Cmdline
 
 0.02  2014/07/20
     (ms) Works now with the Google Drive API
+    (ms) Using site-specific classes now, OAuth::Cmdline::GoogleDrive,
+         OAuth::Cmdline::Spotify, etc. to deal with minor differences
+         in the sites' OAuth implementation.
 
 0.01  2014/07/12
     (ms) Where it all began.
